# MultEdu

./: .gitignore  README.md
WorkStuff/Demo/: CMakeLists.txt  Demo.tex  Main.tex
WorkStuff/Demo/lst/: HelloWorld.cpp.tex  calculatorresult.txt  forloops.v  lower1.c  lower2.c
WorkStuff/Demo/src/: Abstract.tex  Bibliography.bib  Compiling.tex  Copyright.tex  Customizing.tex  Defines.tex  Defines.tex.in  Figures.tex  General.tex  Glossaries.tex  Glossary.tex  Heading.tex  Listings.tex  MEMacros.tex  Organizing.tex  Sectioning.tex  Supplements.tex  Version.tex
common/: CleanEdu.cmake  MEColors.tex  MEFigures.tex  MELanguages.tex  MEListings.tex  MEMacros.tex  MEPackages.tex  MESections.tex  METables.tex  MultEdu.cmake
common/defaults/: Copyright.tex
common/formats/: A4Fancy.tex  MEFancyTOC.tex  MESetupBeamerFormat.tex  MESetupPrintedFormat.tex  WEB.tex  beamer_ME.tex  beamertry.tex  eBook.tex  memoir_A4Fancy.tex  memoir_A4Simple.tex  memoir_WEB.tex  memoir_eBook.tex
src/: Options.tex  Organizing.tex
